--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                <a href="#" class="btn">Получить заряд</a>
             </div>
             <div class="intro__block">
-               <img class="intro__img" src="img/images/Juice_03.png" alt="">
+               <img class="intro__img" src="img/Juice_03.png" alt="">
             </div>
             <div class="social">
                <a class="social__icon" href="https://github.com/ryzerrast" target="_blank">
